SF , Code Centralization
